[tool.poetry]
name = "envoy-logger"
version = "0.1.0"
description = "Scrapes data from Enphase Envoy local server and uploads to time-series databases"
authors = ["Alex Mykyta <https://github.com/amykyta3>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "*"
influxdb-client = "*"
prometheus-client = "*"
PyYAML = "*"
requests = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
isort = "*"
flake8 = "*"
mdformat = "*"
pytest = "*"
pytest-mock = "*"
yamllint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
branch = true

[tool.isort]
profile = "black"
src_paths = ["envoy_logger", "test"]
